--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="header__container">
             <div class="header__logo">
-                <img class="header__logo__img" src="../dist/assets/images/ring-logo.png" alt="Anel">
+                <img class="header__logo__img" src="./assets/images/ring-logo.png" alt="Anel">
                 <h1 class="title--medium">O Senhor dos Anéis</h1>
             </div>
             <ul class="header__links text--small">
@@ -22,12 +22,12 @@
         </nav>
     </header>
     <section class="hero">
-        <img class="hero__image" src="../dist/assets/images/hero/hero-title-vinheta.png" alt="Personagens do filme O Senhor dos Anéis">
+        <img class="hero__image" src="./assets/images/hero/hero-title-vinheta.png" alt="Personagens do filme O Senhor dos Anéis">
     </section>
     <section id="sinopse" class="sinopse">
         <h2 class="sinopse__title title--big">Sinopses dos três filmes da trilogia O Senhor dos Anéis, de J.R.R. Tolkien, dirigidos por Peter Jackson</h2>
         <article class="sinopse__movie">
-            <img class="sinopse__movie__poster" src="../dist/assets/images/section-sinopse/the-lord-of-the-rings-the-fellowship-of-the-ring.jpg" alt="Poster do filme O Senhor dos Anéis: A Sociedade do Anel (em inglês: The Lord of The rings - The Fellowship of The Ring)">
+            <img class="sinopse__movie__poster" src="./assets/images/section-sinopse/the-lord-of-the-rings-the-fellowship-of-the-ring.jpg" alt="Poster do filme O Senhor dos Anéis: A Sociedade do Anel (em inglês: The Lord of The rings - The Fellowship of The Ring)">
             <div class="sinopse__movie__description">
                 <h3 class="title--medium">O Senhor dos Anéis: A Sociedade do Anel (2001)</h3>
                 <h5 class="sinopse__movie__description__subtitle text--small">The Lord of the Rings: The Fellowship of The Ring</h5>
@@ -37,7 +37,7 @@
             </div>
         </article>
         <article class="sinopse__movie">
-            <img class="sinopse__movie__poster" src="../dist/assets/images/section-sinopse/the-lord-of-the-ring-the-two-towers.jpg" alt="Poster do filme O Senhor dos Anéis: As Duas Torres (em inglês: The Lord of The rings - The Two Towers)">
+            <img class="sinopse__movie__poster" src="./assets/images/section-sinopse/the-lord-of-the-ring-the-two-towers.jpg" alt="Poster do filme O Senhor dos Anéis: As Duas Torres (em inglês: The Lord of The rings - The Two Towers)">
             <div class="sinopse__movie__description">
                 <h3 class="title--medium">O Senhor dos Anéis: As Duas Torres (2002)</h3>
                 <h5 class="sinopse__movie__description__subtitle text--small">The Lord of the Rings: The Two Towers</h5>
@@ -47,7 +47,7 @@
             </div>
         </article>
         <article class="sinopse__movie">
-            <img class="sinopse__movie__poster" src="../dist/assets/images/section-sinopse/the-lord-of-the-rings-the-return-of-the-king.jpg" alt="Poster do filme O Senhor dos Anéis: O Retorno do Rei (em inglês: The Lord of The rings - The Return of The King)">
+            <img class="sinopse__movie__poster" src="./assets/images/section-sinopse/the-lord-of-the-rings-the-return-of-the-king.jpg" alt="Poster do filme O Senhor dos Anéis: O Retorno do Rei (em inglês: The Lord of The rings - The Return of The King)">
             <div class="sinopse__movie__description">
                 <h3 class="title--medium">O Senhor dos Anéis: O Retorno do Rei (2003)</h3>
                 <h5 class="sinopse__movie__description__subtitle text--small">The Lord of the Rings: The Return of The King</h5>
@@ -61,103 +61,103 @@
         <h2 class="title--big">Personagens</h2>
         <ul class="actors__list">
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/aragorn.png" alt="Aragorn - Viggo Mortensen">
+                <img src="./assets/images/elenco-mapa-trailer/aragorn.png" alt="Aragorn - Viggo Mortensen">
                 <div class="overlay">
                     <p class="overlay__name">Aragorn - Viggo Mortensen</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/boromir.png" alt="Boromir - Sean Bean">
+                <img src="./assets/images/elenco-mapa-trailer/boromir.png" alt="Boromir - Sean Bean">
                 <div class="overlay">
                     <p class="overlay__name">Boromir - Sean Bean</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/theoden.png" alt="Théoden - Bernard Hill">
+                <img src="./assets/images/elenco-mapa-trailer/theoden.png" alt="Théoden - Bernard Hill">
                 <div class="overlay">
                     <p class="overlay__name">Théoden - Bernard Hill</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/Eowyn.png" alt="Eowyn - Miranda Otto">
+                <img src="./assets/images/elenco-mapa-trailer/Eowyn.png" alt="Eowyn - Miranda Otto">
                 <div class="overlay">
                     <p class="overlay__name">Eowyn - Miranda Otto</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/faramir.png" alt="Faramir - David Wenham">
+                <img src="./assets/images/elenco-mapa-trailer/faramir.png" alt="Faramir - David Wenham">
                 <div class="overlay">
                     <p class="overlay__name">Faramir - David Wenham</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/Denethor.png" alt="Denethor - John Noble">
+                <img src="./assets/images/elenco-mapa-trailer/Denethor.png" alt="Denethor - John Noble">
                 <div class="overlay">
                     <p class="overlay__name">Denethor - John Noble</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/arwen.png" alt="Arwen - Liv Tyler">
+                <img src="./assets/images/elenco-mapa-trailer/arwen.png" alt="Arwen - Liv Tyler">
                 <div class="overlay">
                     <p class="overlay__name">Arwen - Liv Tyler</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/elrond.png" alt="Elrond - Hugo Weaving">
+                <img src="./assets/images/elenco-mapa-trailer/elrond.png" alt="Elrond - Hugo Weaving">
                 <div class="overlay">
                     <p class="overlay__name">Elrond - Hugo Weaving</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/legolas.png" alt="Legolas - Orlando Bloom">
+                <img src="./assets/images/elenco-mapa-trailer/legolas.png" alt="Legolas - Orlando Bloom">
                 <div class="overlay">
                     <p class="overlay__name">Legolas - Orlando Bloom</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/gimli.png" alt="Gimli - John Rhys-Davies">
+                <img src="./assets/images/elenco-mapa-trailer/gimli.png" alt="Gimli - John Rhys-Davies">
                 <div class="overlay">
                     <p class="overlay__name">Gimli - John Rhys-Davies</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/gandalf.png" alt="Gandalf - Ian McKellen">
+                <img src="./assets/images/elenco-mapa-trailer/gandalf.png" alt="Gandalf - Ian McKellen">
                 <div class="overlay">
                     <p class="overlay__name">Gandalf - Ian McKellen</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/saruman.png" alt="Saruman - Christopher Lee">
+                <img src="./assets/images/elenco-mapa-trailer/saruman.png" alt="Saruman - Christopher Lee">
                 <div class="overlay">
                     <p class="overlay__name">Saruman - Christopher Lee</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/Frodo.png" alt="Frodo - Elijah Wood">
+                <img src="./assets/images/elenco-mapa-trailer/Frodo.png" alt="Frodo - Elijah Wood">
                 <div class="overlay">
                     <p class="overlay__name">Frodo - Elijah Wood</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/sam.png" alt="Samwise - Sean Astin">
+                <img src="./assets/images/elenco-mapa-trailer/sam.png" alt="Samwise - Sean Astin">
                 <div class="overlay">
                     <p class="overlay__name">Samwise - Sean Astin</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/Merry.png" alt="Merry - Dominic Monaghan">
+                <img src="./assets/images/elenco-mapa-trailer/Merry.png" alt="Merry - Dominic Monaghan">
                 <div class="overlay">
                     <p class="overlay__name">Merry - Dominic Monaghan</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/Pippin.png" alt="Pippin - Billy Boyd">
+                <img src="./assets/images/elenco-mapa-trailer/Pippin.png" alt="Pippin - Billy Boyd">
                 <div class="overlay">
                     <p class="overlay__name">Pippin - Billy Boyd</p>
                 </div>
             </li>
             <li class="actors__list__item">
-                <img src="../dist/assets/images/elenco-mapa-trailer/Gollum.png" alt="Gollum(Sméagol) - Andy Serkis">
+                <img src="./assets/images/elenco-mapa-trailer/Gollum.png" alt="Gollum(Sméagol) - Andy Serkis">
                 <div class="overlay">
                     <p class="overlay__name">Gollum(Sméagol) - Andy Serkis</p>
                 </div>
@@ -177,29 +177,29 @@
         <!-- list streaming -->
         <ul data-tab-id="streaming" class="watch__list watch__list--is-active"><!--active-->
             <li class="watch__list__item">
-                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/hbo-max-logo.png" alt="HBO Max">
+                <img class="watch__list__item__image" src="./assets/images/onde-assistir/hbo-max-logo.png" alt="HBO Max">
                 <h5 class="watch__list__item__plan text--big">Plano: Standart</h5>
                 <ul class="watch__list__item__options text--medium">
                     <li class="watch__list__item__options__option">
-                        <img src="../dist/assets/images/check-section-watch.png" alt="Check">2 dispositivos ao mesmo tempo
+                        <img src="./assets/images/check-section-watch.png" alt="Check">2 dispositivos ao mesmo tempo
                     </li>
                     <li class="watch__list__item__options__option">
-                        <img src="../dist/assets/images/check-section-watch.png" alt="Check">Resolução Full HD
+                        <img src="./assets/images/check-section-watch.png" alt="Check">Resolução Full HD
                     </li>
                     <li class="watch__list__item__options__option">
-                        <img src="../dist/assets/images/check-section-watch.png" alt="Check">30 downloads para curtir off-line
+                        <img src="./assets/images/check-section-watch.png" alt="Check">30 downloads para curtir off-line
                     </li>
                 </ul>
                 <h5 class="watch__list__item__plan__price text--big">R$ 39,90/mês*</h5>
             </li>
             <li class="watch__list__item">
-                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/prime-video-logo.png" alt="Prime Video">
+                <img class="watch__list__item__image" src="./assets/images/onde-assistir/prime-video-logo.png" alt="Prime Video">
                 <h5 class="watch__list__item__plan text--big">Plano: Mensal</h5>
                 <ul class="watch__list__item__options text--medium">
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">3 telas simultâneas</li>
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">Resolução máxima 4K</li>
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">5 telas diferentes</li>
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">Downloads</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">3 telas simultâneas</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">Resolução máxima 4K</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">5 telas diferentes</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">Downloads</li>
                 </ul>
                 <h5 class="watch__list__item__plan text--big">R$ 19,90/mês*</h5>
             </li>
@@ -207,20 +207,20 @@
         <!-- list comprar -->
         <ul data-tab-id="comprar" class="watch__list">
             <li class="watch__list__item">
-                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/youtube-logo.png" alt="YouTube">
+                <img class="watch__list__item__image" src="./assets/images/onde-assistir/youtube-logo.png" alt="YouTube">
                 <h5 class="watch__list__item__plan text--big">Comprar no YoutTube</h5>
                 <ul class="watch__list__item__options text--medium">
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: A Sociedade do Anel - R$ 22,90</li>
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: As Duas Torres - R$ 22,90</li>
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: O Retorno do Rei - R$ 19,90</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: A Sociedade do Anel - R$ 22,90</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: As Duas Torres - R$ 22,90</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis: O Retorno do Rei - R$ 19,90</li>
                 </ul>
                 <h5 class="watch__list__item__plan text--big">Comprar por R$ 75,70</h5>
             </li>
             <li class="watch__list__item">
-                <img class="watch__list__item__image" src="../dist/assets/images/onde-assistir/appletv-white-logo.png" alt="Apple TV">
+                <img class="watch__list__item__image" src="./assets/images/onde-assistir/appletv-white-logo.png" alt="Apple TV">
                 <h5 class="watch__list__item__plan text--big">Comprar na Apple TV</h5>
                 <ul class="watch__list__item__options text--medium">
-                    <li class="watch__list__item__options__option"><img src="../dist/assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis (3 filmes na versão estendida)</li>
+                    <li class="watch__list__item__options__option"><img src="./assets/images/check-section-watch.png" alt="Check">O Senhor do Anéis (3 filmes na versão estendida)</li>
                 </ul>
                 <h5 class="watch__list__item__plan text--big">Comprar por R$ 68,70</h5>
             </li>
@@ -255,11 +255,11 @@
                 </div>
             </li>
         </ul>
-        <img class="faq__img" src="../dist/assets/images/frodo-anel.png" alt="Frodo e anel">
+        <img class="faq__img" src="./assets/images/frodo-anel.png" alt="Frodo e anel">
     </section>
     <footer class="footer">
         <p class="text--small">Desenvolvido por Thayná Rie Shinoda (Aluna de Desenvolvedor Full Stack Python - EBAC)</p>
     </footer>
-    <script src="../dist/scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
